style.css
@import "node_modules/bootstrap/scss/bootstrap";

body {
    overflow-x: hidden !important;
}


.masthead {
  height: 100vh;
  background-image: url("img/Main_BG.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.mastheadmain {
  height: 100vh;
}

video {
  width: 100vw;
  height: 100vh;
  object-fit: fill;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: -1;
}

.masthead-about {
  height: 100vh;
  background-image: url("img/Main_BG.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}


.carousel-video-inner {
  text-align: center;
}

.navbar{
  border: none;
  /* background-color:#000000; /*whichever you want
  opacity: 0.5;
  filter:(opacity=50); */
  background-color:rgba(50,53,92,0.6);
}



.navbar-nav > li{
     padding-left:3vw;
     padding-top:0.3vw;
     padding-right:3vw;

}

.buttonsection {
  justify-content: center;
  padding-top:3%;
}

.twitterbutton {
  background-color: #55acee;
}


.textbox {
  background-color:rgba(0,0,0,0.3);
  border-radius: 25px;
}

.textbox-about {
  background-color:rgba(0,0,0,0.5);
  border-radius: 25px;
}


.btn-steam {
    background-color: #000;
}

.page-footer {
  background-color:#000000; /*whichever you want*/
  opacity: 0.5;
  filter:(opacity=50);
}

.btn-xlarge {
    padding-left:1vw;
    padding-right:1vw;
    padding-top:1vh;
    padding-bottom:1vh;
    font-size: 22px; //change this to your desired size
    line-height: normal;
    -webkit-border-radius: 8px;
       -moz-border-radius: 8px;
            border-radius: 8px;
}

.sectiontitle {
  height: 35vh;
  max-height: 100%;
  background-image: url("img/Logo.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  margin-bottom: 50px;
}

.sectiontitle-about {
  height: 20vh;
  max-height: 100%;
  background-image: url("img/Logo.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.section1 {
  background-image: url("img/Tile_BG.png");
  background-position: center;
  background-repeat: repeat;
  align-items: center;
}

.section2 {
  height: calc(60vw);
  background-image: url("img/BG2_Snow.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.section3 {

  min-height: 500px;
  min-width: 90%;
  background-image: url("img/BG3_Pond.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

footer {

  min-height: 100px;
  background-image: url("img/Tile_BG.png");
  background-position: center;
  background-repeat: repeat;
  align-items: center;
  text-align: center;

}

.iframe-container{
  position: absolute;
  width: 90%;
  padding-bottom: 56.25%;

}
.iframe-container iframe{
  position: absolute;

  left:10%;
  right:15%;
  width: 90%;
  height: 90%;
}


.iframe-containersteam{


  padding-bottom: 56.25%;
  height: 0;

}
.iframe-containersteam iframe{

  top:5%;


}

.image-container{
  margin-top: 5%;
  width: 60%;
}

.description-text{
  max-height:50%;
}

